clang format Microsoft Style

--- a/Pong2.vcxproj
+++ b/Pong2.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="DataTypes/Vector2.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".clang-format" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
