--- a/Pong2.vcxproj.filters
+++ b/Pong2.vcxproj.filters
@@ -161,5 +161,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include=".clang-format" />
   </ItemGroup>
 </Project>
